<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="REMOTE" Id="{4e291570-ebe0-4ba9-b795-df8674c1b54e}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM REMOTE
VAR
	feedback		: RemoteFeedback;	
	control			: RemoteControl;
	
	UdpIO			: UdpClient(3232258620, 50060, 50050, SIZEOF(feedback), ADR(feedback), SIZEOF(control), ADR(control));
	
	enabled			: BOOL := FALSE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Time with overflow check
feedback.t := feedback.t + 1.0/1000.0;
IF feedback.t >= 32765.0 THEN
	feedback.t := 0.0;
END_IF

// Control data
IF (control.udp_key <> 81549300) AND enabled THEN
	// COMAU
	COMAU.control := control.comau;
END_IF

// Feedback data
feedback.em8000 := EM8000.feedback;
feedback.em1500 := EM1500.feedback;
feedback.comau := COMAU.feedback;

feedback.mru1 := MRU1.feedback;
feedback.mru2 := MRU2.feedback;

// AT960
feedback.at960.x := LREAL_TO_REAL(Main.x);
feedback.at960.y := LREAL_TO_REAL(Main.y);
feedback.at960.z := LREAL_TO_REAL(Main.z);
feedback.at960.q0 := LREAL_TO_REAL(Main.q0);
feedback.at960.q1 := LREAL_TO_REAL(Main.q1);
feedback.at960.q2 := LREAL_TO_REAL(Main.q2);
feedback.at960.q3 := LREAL_TO_REAL(Main.q3);

// Ship 1
feedback.ship1.surge := LREAL_TO_REAL(SIMULATOR.ship1.surge);
feedback.ship1.sway := LREAL_TO_REAL(SIMULATOR.ship1.sway);
feedback.ship1.heave := LREAL_TO_REAL(SIMULATOR.ship1.heave);
feedback.ship1.roll := LREAL_TO_REAL(SIMULATOR.ship1.roll);
feedback.ship1.pitch := LREAL_TO_REAL(SIMULATOR.ship1.pitch);
feedback.ship1.yaw := LREAL_TO_REAL(SIMULATOR.ship1.yaw);

// Ship 2
feedback.ship2.surge := LREAL_TO_REAL(SIMULATOR.ship2.surge);
feedback.ship2.sway := LREAL_TO_REAL(SIMULATOR.ship2.sway);
feedback.ship2.heave := LREAL_TO_REAL(SIMULATOR.ship2.heave);
feedback.ship2.roll := LREAL_TO_REAL(SIMULATOR.ship2.roll);
feedback.ship2.pitch := LREAL_TO_REAL(SIMULATOR.ship2.pitch);
feedback.ship2.yaw := LREAL_TO_REAL(SIMULATOR.ship2.yaw);



UdpIO();
]]></ST>
    </Implementation>
    <LineIds Name="REMOTE">
      <LineId Id="969" Count="3" />
      <LineId Id="954" Count="1" />
      <LineId Id="530" Count="1" />
      <LineId Id="873" Count="0" />
      <LineId Id="533" Count="0" />
      <LineId Id="871" Count="0" />
      <LineId Id="567" Count="0" />
      <LineId Id="704" Count="0" />
      <LineId Id="957" Count="0" />
      <LineId Id="959" Count="0" />
      <LineId Id="639" Count="0" />
      <LineId Id="965" Count="1" />
      <LineId Id="964" Count="0" />
      <LineId Id="640" Count="1" />
      <LineId Id="864" Count="5" />
      <LineId Id="730" Count="0" />
      <LineId Id="929" Count="0" />
      <LineId Id="931" Count="13" />
      <LineId Id="930" Count="0" />
      <LineId Id="752" Count="0" />
      <LineId Id="956" Count="0" />
      <LineId Id="536" Count="1" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>